@@ -5,6 +5,8 @@ Version 1.8.4
        browser when clicking "up a directory". (Stefan)
 - BUG: Issue #587: wrong colors in locatorbar
        in TortoiseBlame. (Stefan)
+- BUG: Issue #588: subwcrev crash after replacing
+       $WCREV$ in UTF-16 encoded file. (Stefan)
 - NEW: Issue #586: Option to disable SVNParentPath
        handling in repo browser. (Stefan)
 
